# EE6180-Project-Code

./: .gitignore  README.md  blip-pl.ipynb  environment.yml  eval.ipynb  evaluation.py  hf-metrics.py  inference-ensemble.py  inference.py  logging.yaml  pyproject.toml  split_data.py  tex.py  view.md  view.py  view.tex
image_captioning_with_blip/: __init__.py  data.py  metrics.py
outputs/: BLIP1.md  BLIP1.tsv  Blip2__Salesforce__blip2-flan-t5-xxl.md  Blip2__Salesforce__blip2-flan-t5-xxl.tsv  Blip2__Salesforce__blip2-flan-t5-xxl__no_prompt.md  Blip2__Salesforce__blip2-flan-t5-xxl__no_prompt.tsv  Blip2__Salesforce__blip2-opt-2.7b.tsv  Llama3.2__meta-llama__Llama-3.2-11b-Vision-Instruct.csv  Llama3.2__meta-llama__Llama-3.2-11b-Vision-Instruct.json  Llama3.2__meta-llama__Llama-3.2-11b-Vision-Instruct.md  Llama3.2__meta-llama__Llama-3.2-11b-Vision-Instruct.tsv  Phi4Ensemble__microsoft__Phi-4-mini-instruct.tsv  Phi4Ensemble__microsoft__Phi-4-mini-instruct__1.tsv  Phi4Ensemble__microsoft__Phi-4-mini-instruct__10.json  Phi4Ensemble__microsoft__Phi-4-mini-instruct__10.md  Phi4Ensemble__microsoft__Phi-4-mini-instruct__10.tsv  Phi4Ensemble__microsoft__Phi-4-mini-instruct__11.json  Phi4Ensemble__microsoft__Phi-4-mini-instruct__11.md  Phi4Ensemble__microsoft__Phi-4-mini-instruct__11.tsv  Phi4Ensemble__microsoft__Phi-4-mini-instruct__12.json  Phi4Ensemble__microsoft__Phi-4-mini-instruct__12.md  Phi4Ensemble__microsoft__Phi-4-mini-instruct__12.tsv  Phi4Ensemble__microsoft__Phi-4-mini-instruct__13.json  Phi4Ensemble__microsoft__Phi-4-mini-instruct__13.md  (+62 more)
(+36 files in other folders)
